add lecture download through the queue